# ddb

./: .gitignore  Cargo.toml  build.rs
src/: error.rs  lib.rs  main.rs  wal.rs
src/cache/: cache.proto  encoding.rs  kv.rs  mod.rs
src/cache/server/: main.rs
src/lib/: error.rs
src/log/: log.proto  log.rs  logger.rs  mod.rs  service.rs
src/log/server/: main.rs
