[package]
name = "ddb"
description = "distributed in-memory key-value store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "./src/lib/lib.rs"

[[bin]]
name = "log"
path = "./src/log/service.rs"

[dependencies]
